--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -2,25 +2,18 @@
 layout: page
 permalink: contact.html
 title: Contact Me
-header-img:  
-last-updated: 2020-10-30 5:55 PM
+header-img: null
+last-updated: '2020-10-30 5:55 PM'
+published: true
 ---
 {% assign theme = site.data.themes[site.ui_theme] %}
 <div class="blogcard card-2 mb-4 mt-4" style="width: 100%;">
   <div class="card-body">
     <h1 class="card-title text-center" style="font-size:{{ theme.post-title-size }};font-weight:{{ theme.post-font-weight }};">{{ page.title }}</h1>
     <p>{{ content | markdownify }} </p>
-    <!-- Target -->
-    {% if page.pgp %}
-    <input id="foo" style="width:50%;" class="text-muted" value="{{ site.pgp-key }}">
-    <!-- Trigger -->
-    <button class="btn" data-clipboard-target="#foo">
-        <i class="far fa-copy" alt="Copy PGP clipboard"></i>
-        <span style="font-size:14px;">Copy</span>
-    </button>
-    {% endif %}
   </div>
 </div>
+
 
 <div class="card shadow">
   <div class="container">
