--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -17,7 +17,7 @@ published: true
 
 <div class="card shadow">
   <div class="container">
-    <form name="contact" method="POST" data-netlify="true">
+    <form name="contact" method="POST"  netlify>
       <div class="mb-3 mt-5">
         <input type="name" placeholder="Your Name" name="name" class="form-control" id="inputForName"/>
       </div>
