--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -161,7 +161,10 @@ published: true
 <div class="blogcard card-2 mb-4 mt-4" style="width: 100%;">
   <div class="card-body">
     <h1 class="card-title text-center" style="font-size:{{ theme.post-title-size }};font-weight:{{ theme.post-font-weight }};">Contact Me</h1>
-    <p>Feel free to reach out to me using the form below:</p>
+    <p>
+Feel free to reach out to me through <a href="mailto:mattjohnvo@outlook.com"
+class="highlighted">E-Mail</a> , <a href="https://www.linkedin.com/in/mattjohnvo/" class="highlighted">Linkedin</a> , or <a href="https://twitter.com/mattjohnvo" class="highlighted">Twitter</a>. You can also send me a message through the form below.
+</p>
   </div>
 </div>
 
