--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <a href="/">Home</a> &copy; 2024 - Matthew Johnson
     </p>
     <p class="navbar-text pull-right">
-      <span class="sr-only">Follow us on social media:</span>
+      <span class="sr-only">Follow me on social media:</span>
       {% include social-footer.html %}
     </p>
   </div>
