--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -57,13 +57,33 @@ published: true
 <div class="card mx-auto mb-1 border-0" style="max-width: 100%;">
 {% endif %}
   <div class="card-body">          
-      <div class="tab-content mt-3">
-        {% for section in site.data.sections %}
-          <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel">
-            {# Empty field, or you can customize the content here #}
-          </div>
-        {% endfor %}
-      </div>
+    <div class="tab-content mt-3">
+      {% for section in site.data.sections %}
+        <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel">
+          {% if section.name == "Clients" %}
+            <!-- CLIENT CAROUSEL -->
+            <div class="client-carousel">
+              <div class="carousel-cell">
+                <img src="https://m.media-amazon.com/images/W/MEDIAX_792452-T2/images/I/71gU2qg+NpL.jpg" alt="Client 1">
+              </div>
+              <div class="carousel-cell">
+                <img src="https://m.media-amazon.com/images/W/MEDIAX_792452-T2/images/I/71VBQp8KiFL._AC_UF894,1000_QL80_.jpg" alt="Client 2">
+              </div>
+              <div class="carousel-cell">
+                <img src="https://s3-us-west-1.amazonaws.com/member-portal-uploads-production/events/images/000/014/554/small/Source-Connecr_-_Logo_Circle.jpg?1682107609" alt="Client 3">
+              </div>
+              <div class="carousel-cell">
+                <img src="https://thumbs.static-thomann.de/thumb/padthumb600x600/pics/bdb/_12/127970/11380969_800.jpg" alt="Client 4">
+              </div>
+              <!-- Add more client images as needed -->
+            </div>
+            <!-- END CLIENT CAROUSEL -->
+          {% else %}
+            {# Add your content for other sections as needed #}
+          {% endif %}
+        </div>
+      {% endfor %}
+    </div>
   </div>
 </div>
 <!-- HOME HIGHLIGHTS SECTION --> 
