--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -50,23 +50,30 @@ published: true
 
 <!-- style="font-family:{{ theme.link-font }};background-color:{{ theme.nav-color }}; -->
 
-<!-- HOME HIGHLIGHTS SECTION --> 
+<!-- HOME HIGHLIGHTS SECTION -->
 {% if site.animate %}
 <div class="card mx-auto animate__animated animate__slideInUp animate__delay-1s glowing-border" style="max-width: 100%;">
 {% else %}
 <div class="card mx-auto mb-1 border-0" style="max-width: 100%;">
 {% endif %}
-  <div class="card-body">          
-      <div class="tab-content mt-3">
-        {% for section in site.data.sections %}
-          <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel">
-            {# Empty field, or you can customize the content here #}
-          </div>
-        {% endfor %}
+  <div class="card-body">
+    <div class="tab-content mt-3">
+      <div class="tab-pane overflow-auto" id="clients" role="tabpanel">
+        <!-- First Carousel -->
+        {% include carousel.html height="50" unit="%" duration="7" number="1" %}
+
+        <!-- Second Carousel -->
+        {% include carousel.html height="50" unit="%" duration="7" number="2" %}
       </div>
+      {% for section in site.data.sections %}
+        <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel">
+          {# Add your content for other sections as needed #}
+        </div>
+      {% endfor %}
+    </div>
   </div>
 </div>
-<!-- HOME HIGHLIGHTS SECTION --> 
+<!-- END HOME HIGHLIGHTS SECTION -->
 {% if site.animate %}
 <div class="card mx-auto animate__animated animate__slideInUp animate__delay-1s glowing-border" style="max-width: 100%;">
 {% else %}
