--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,23 @@
 layout: default
 published: true
 ---
+---
+layout: default  # Example metadata, adjust according to your needs
+title: My Page
+carousels:
+  - images: 
+      - image: /uploads/slider/image1.jpg
+      - image: /uploads/slider/image2.jpg
+      - image: /uploads/slider/image3.jpg
+      - image: /uploads/slider/image4.jpg
+  - images: 
+      - image: /uploads/slider/image5.jpg
+      - image: /uploads/slider/image6.jpg
+      - image: /uploads/slider/image7.jpg
+      - image: /uploads/slider/image8.jpg
+---
+
+
 {% assign theme = site.data.themes[site.ui_theme] %}
 
 <!--  HELP TIPS SECTION  -->
