--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ published: true
     </button>
   </div>
   <div class="toast-body">
-    Thanks for checking out Jekyll-Theme-Dumbarton ! This theme was developed by <a href="https://twitter.com/tbutler0x90">Tyler Butler</a>. If you're interested in using this in your own website, checkout the project on <a href="https://github.com/tcbutler320/Jekyll-Theme-Dumbarton">Github</a>
+    Under Construction
   </div>
 </div>
 {% endif %}
