--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,7 +33,20 @@ published: true
       {% endif %}
     </div>
     <!-- EDUCATION SECTION -->
-
+    <div class="col-md-8">
+      {% if site.animate %}
+      <div class="card-body animate__animated animate__fadeInRight" style="color:{{theme.education-font-color}};">
+      {% else %}
+      <div class="card-body mt-0" style="color:{{theme.education-font-color}};">
+      {% endif %}
+        <p style="color:{{theme.education-font-color}};">{{ content | markdownify}}<p>
+        {% if site.home_option == "education" %}
+          {% include home.html %}
+        {% endif %}
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- style="font-family:{{ theme.link-font }};background-color:{{ theme.nav-color }}; -->
 
