--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,7 +41,7 @@ published: true
       {% endif %}
         <p style="color:{{theme.education-font-color}};">{{ content | markdownify}}<p>
         {% if site.home_option == "education" %}
-          {% include home.html %}
+          {% include education.html %}
         {% endif %}
       </div>
     </div>
