--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,7 +49,7 @@ published: true
 </div>
 
 <!-- style="font-family:{{ theme.link-font }};background-color:{{ theme.nav-color }}; -->
-
+{% comment %}
 <!-- HOME HIGHLIGHTS SECTION --> 
 {% if site.animate %}
 <div class="card mx-auto animate__animated animate__slideInUp animate__delay-1s glowing-border" style="max-width: 100%;">
@@ -72,6 +72,7 @@ published: true
 {% else %}
 <div class="card mx-auto mb-1 border-0"  style="max-width: 100%;">
 {% endif %}
+{% endcomment %}
   <!-- ... (your existing card content) ... -->
 </div>
 
